--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.16.2",
+    "@radix-ui/themes": "^3.2.1",
     "next": "15.5.3",
     "prisma": "^6.16.2",
     "react": "19.1.0",
